# t

./: CMakeLists.txt  README
cmakes/: FindCII.cmake  FindCtest.cmake  FindLLVM.cmake
include/: ast.h  codegen.h  token.h
include/tests/: utils.h
src/: CMakeLists.txt  ast.c  codegen.c  compile.c  token.c  token.l
tests/: CMakeLists.txt  test.c  test_codegen.c  test_fe.c  test_token.c  utils.c
tests/data/: test_parse  test_parse.1  test_parse.3  test_parse.4  test_parse.5  test_parse.6  test_parse.7  test_parse.8  test_tok
tests/isolation/: isolation.py
tests/isolation/expected/: defun
tests/isolation/input/: defun
